added full Recipe web

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   
   <title> Recipe page-Frontend Mentor </title>
@@ -12,7 +12,7 @@
 <body>
   <div class="main-container">
     <header class="img-title">
-      <img src="assets/images/image-omelette.jpeg">
+      <img src="image-omelette.jpeg">
       <div class="header-section">
         <h1>Simple Omelette Recipe</h1>
         <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
